# energy-meter-bot-cv

./: .gitignore  .pre-commit-config.yaml  README.md  obb_crop_robust.py  pipeline.py  pyproject.toml  requirements.txt  save_cropped.py
configs/: trocr_config.yaml  yolo_meter_screen.yaml  yolo_reading_area.yaml
docs/: contracts.md  decisions.md
scripts/: train_yolo_obb.sh
src/detection/: infer_meter_screen.py  infer_reading_area.py  train_meter_screen.py  train_reading_area.py
src/ocr/: eval_trocr.py  infer_trocr.py  train_trocr.py
src/utils/: config.py  contracts.py  label_normalization.py  logger.py  preprocessing.py  visualization.py
